# yolo-benchmark

./: .env.example  .gitignore  GUIDE.md  README.md  config.yaml  download_dataset.py  main.py  pyproject.toml  requirements.txt  test.ipynb
configs/: config_loader.py  detector_config.yaml
docs/: tiny_train.md
evaluation/: __init__.py  base_evaluation.py  evaluator_factory.py  visualize.py
evaluation/detector/: __init__.py  yolo_evaluator.py
models/: __init__.py  base_model.py
models/detection/: __init__.py  yolo_detector.py
outputs/detection_experiments/experiment_20260706_195625/: comparison.csv
outputs/detection_experiments/experiment_20260706_195625/yolov5_nano/: metrics.json
outputs/detection_experiments/experiment_20260708_110824/: comparison.csv
outputs/detection_experiments/experiment_20260708_110824/yolov8_small/: metrics.json
training/: __init__.py  base_trainer.py  tiny_train.py  trainer_factory.py
training/detector/: __init__.py  yolo_trainer.py
