[project]
name = "ubo-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupyter-server>=2.20.0",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "roboflow>=1.3.12",
    "ultralytics>=8.0.0,<9.0.0",
]
